Fixing z-index of filter panel

--- a/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
+++ b/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
@@ -13,7 +13,7 @@
 .lane-menu-wrapper {
 	position: absolute;
 	top: 0;
-	z-index: 3;
+	z-index: 2;
 	height: 100%;
 	background: #edeff0;
 	border-top-right-radius: 3px;
